# ROBOTICS_LAB

./: README.md
CLASS_EXERCISE/rl_robot_description_pkg/urdf/: diff_robot.xacro
CLASS_EXERCISE/surveillance_task/: CMakeLists.txt
CLASS_EXERCISE/surveillance_task/src/: surv_client.cpp  surveillance.cpp
lbr_iiwa_description/: CMakeLists.txt
lbr_iiwa_description/conf/: lbr_iiwa_control.yaml
lbr_iiwa_description/src/: send_pose.cpp
lbr_iiwa_description/src/plugin/: plugin_clik.cpp
lbr_iiwa_description/urdf/: lbr_iiwa_ee.urdf.xacro
rl_robot_kuka_pkg/: CMakeLists.txt  package.xml  urdf.rviz
rl_robot_kuka_pkg/launch/: display_xacro_urdf.launch
rl_robot_kuka_pkg/urdf/: kuka_iiwa.xacro  kuka_iiwa_macro.xacro
rl_robot_kuka_slider_pkg/: CMakeLists.txt  package.xml
rl_robot_kuka_slider_pkg/launch/: display_xacro_urdf.launch
rl_robot_kuka_slider_pkg/urdf/: kuka_iiwa.xacro
ros_controller/: CMakeLists.txt  package.xml
ros_controller/action/: control.action
ros_controller/src/: controller_client.cpp  controller_server.cpp
ros_fibonacci/: CMakeLists.txt  package.xml
ros_fibonacci/src/: node1.cpp  node2.cpp
ros_fibonacci/srv/: service.srv
